# prevc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
demo/: sudoku.prev
include/prevc/: error.hxx  settings.hxx  version.hxx
include/prevc/pipeline/: phase.hxx  pipeline.hxx
include/prevc/pipeline/AST/: arguments.hxx  array-access.hxx  array-type.hxx  assignment.hxx  atom.hxx  binary-operation.hxx  cast.hxx  collection-node.hxx  component-access.hxx  component.hxx  components.hxx  compound.hxx  declaration.hxx  declarations.hxx  expression-statement.hxx  expression.hxx  function-call.hxx  function-declaration.hxx  if.hxx  named-type.hxx  new.hxx  node.hxx  parameter.hxx  parameters.hxx  parenthesis.hxx  pointer-type.hxx  primitive-type.hxx  record-type.hxx  statement.hxx  statements.hxx  type-declaration.hxx  type.hxx  unary-operation.hxx  variable-declaration.hxx  variable-name.hxx  while.hxx
include/prevc/pipeline/AST/_template/: collection-node.txx
include/prevc/pipeline/derivation_analysis/: derivation-analysis.hxx
include/prevc/pipeline/lexical_analysis/: lexical-analysis.hxx  symbol.hxx  symbols-vector.hxx  token.hxx
include/prevc/pipeline/output_generation/: output-generation.hxx
include/prevc/pipeline/semantic_analysis/: array-type.hxx  atom-type.hxx  concrete-type.hxx  frame-system.hxx  frame.hxx  link-type.hxx  namespace.hxx  pointer-type.hxx  record-type.hxx  semantic-analysis.hxx  type-system.hxx  type.hxx
include/prevc/pipeline/syntax_analysis/: syntax-analysis.hxx  syntax-node.hxx
include/prevc/util/: location.hxx  reader.hxx  string.hxx
script/: derivation-tree-generator-generator.py
src/: error.cxx  prevc.cxx  settings.cxx
src/pipeline/: phase.cxx  pipeline.cxx
src/pipeline/AST/: arguments.cxx  array-access.cxx  array-type.cxx  assignment.cxx  atom.cxx  binary-operation.cxx  cast.cxx  component-access.cxx  component.cxx  components.cxx  compound.cxx  declaration.cxx  declarations.cxx  expression-statement.cxx  expression.cxx  function-call.cxx  function-declaration.cxx  if.cxx  named-type.cxx  new.cxx  node.cxx  parameter.cxx  parameters.cxx  parenthesis.cxx  pointer-type.cxx  primitive-type.cxx  record-type.cxx  statement.cxx  statements.cxx  type-declaration.cxx  type.cxx  unary-operation.cxx  variable-declaration.cxx  variable-name.cxx  while.cxx
src/pipeline/derivation_analysis/: derivation-analysis.cxx
src/pipeline/lexical_analysis/: lexical-analysis.cxx  symbol.cxx  symbols-vector.cxx
src/pipeline/output_generation/: output-generation.cxx
src/pipeline/semantic_analysis/: array-type.cxx  atom-type.cxx  concrete-type.cxx  frame-system.cxx  frame.cxx  link-type.cxx  namespace.cxx  pointer-type.cxx  record-type.cxx  semantic_analysis.cxx  type-system.cxx  type.cxx
src/pipeline/syntax_analysis/: grammar.txt  syntax-analysis.cxx  syntax-node.cxx
src/util/: location.cxx  reader.cxx  string.cxx
